# project-manager

./: Cargo.toml
src/: cli.rs  config.rs  file_helpers.rs  list.rs  main.rs  project.rs  test_utils.rs  workspace.rs  write.rs
src/commands/: list.rs  new.rs
