[package]
name = "pm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", default-features = false, features = ["serde", "now"] }
clap = { version = "4.5.41", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.9.2", default-features = false, features = ["serde", "display", "parse"] }
